--- a/quien soy.html
+++ b/quien soy.html
@@ -39,7 +39,7 @@
     <div class="parrafoquiensoy">
     
         <p>
-            Soy no persona responsable comprometido con el desarollo y mejora continua,<br>
+            Soy una persona responsable comprometido con el desarollo y mejora continua,<br>
             Autodidacta y de rapido apredizaje en pro de mejorar el entorno laboral,<br>
             trabajo bajo presion  y productivamente.
             
