--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="estilos.css">
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="grid-galeria.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <script src="https://kit.fontawesome.com/62ea397d3a.js" crossorigin="anonymous">
     </script>
 </head>
@@ -21,6 +25,7 @@
             <li class="nav__li"><i class="fas fa-user-friends"></i><a href="quien soy.html">Quien soy</a></li>
             <li class="nav__li"><i class="far fa-address-card"></i></i><a href="habilidades.html">habilidades</a></li>
             <li class="nav__li"><i class="fab fa-whatsapp-square"></i></i><a href="https://wa.me/529848044067" target="_BLANK">Whatsapp</a></li>
+            <li class="nav__li"><i class="fas fa-flag"></i><a href="https://jimmydevlop.herokuapp.com/">English</a></li>
         </ul>
         <ul class="nav__responsive-ul">
         <div class="nav__responsive-button-container">
@@ -31,6 +36,7 @@
         <li class="nav__responsive-li"><i class="fas fa-user-friends"></i><a href="quien soy.html">Quien soy</a></li>
         <li class="nav__responsive-li"><i class="far fa-address-card"></i></i><a href="habilidades.html">Habilidades</a></li>
         <li class="nav__responsive-li"><i class="fab fa-whatsapp-square"></i><a href="https://wa.me/529848044067" target="_BLANK">Whatsapp</a></li>
+        <li class="nav__responsive-li"><i class="fas fa-flag"></i><a href="https://jimmydevlop.herokuapp.com/">English</a></li>
         </div>
         </ul>
 
