--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav>
         <ul class="nav">
             <ul class="nav__ul">
-            <li class="nav__li"><i class="fas fa-home"></i><a href="">Inicicio</a></li>
+            <li class="nav__li"><i class="fas fa-home"></i><a href="">Inicio</a></li>
             <li class="nav__li"><i class="fas fa-user-friends"></i><a href="quien soy.html">Quien soy</a></li>
             <li class="nav__li"><i class="far fa-address-card"></i></i><a href="habilidades.html">habilidades</a></li>
             <li class="nav__li"><i class="fab fa-whatsapp-square"></i></i><a href="https://wa.me/529848044067" target="_BLANK">Whatsapp</a></li>
@@ -32,7 +32,7 @@
         <div class="nav__resposnsive-button fas fa-bars"></div>
         </div>
         <div class="nav__li-container">
-        <li class="nav__responsive-li"><i class="fas fa-home"></i><a href="">Inicicio</a></li>
+        <li class="nav__responsive-li"><i class="fas fa-home"></i><a href="">Inicio</a></li>
         <li class="nav__responsive-li"><i class="fas fa-user-friends"></i><a href="quien soy.html">Quien soy</a></li>
         <li class="nav__responsive-li"><i class="far fa-address-card"></i></i><a href="habilidades.html">Habilidades</a></li>
         <li class="nav__responsive-li"><i class="fab fa-whatsapp-square"></i><a href="https://wa.me/529848044067" target="_BLANK">Whatsapp</a></li>
