--- a/habilidades.html
+++ b/habilidades.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>quien soy</title>
+    <title>responsive-site</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="estilos.css">
     <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="grid-galeria.css">
+    <link
+    rel="stylesheet"
+    
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <script src="https://kit.fontawesome.com/62ea397d3a.js" crossorigin="anonymous">
     </script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
 <body>
 <header>    
@@ -39,9 +47,11 @@
     <div class="parrafohabilidades">
     
         <p>
-        Idioma	inglés intermedio Fluido hablado y escrito<br>
-        Programas: Offices, Corel draw 8, Adobe Photoshop cc, Adobe premiere, Adobe illustrador cc, Frontend developer responsive design (html 5, css3)
-        marketing digital (facebook marketing y google ads ), animación y creador de contenido (adobe animate)<br>
+        Idioma	inglés intermedio Fluido hablado y escrito.<br>
+        Programas: Offices, Corel draw 20, Adobe Photoshop cc, Adobe premiere, Adobe illustrador cc, Adobe Animate y Adobe after effects   
+        Frontend developer responsive design:
+        (html 5, css3, Java script, Node js, librerias Boostrap/npm/express)
+        marketing digital (facebook marketing y google ads )<br>
         Mantenimiento a computadoras: mantenimiento preventivo y correctivo a computadoras, configuración de Reuters y redes wifi, recuperación de información,
         Formateo e instalación de software.  
         </p>  
@@ -50,6 +60,12 @@
 </header>  
 </article>
 
+  
+  <!-- SCRIPTS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  
 </body>
 
 </html>
