--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <title>responsive-site</title>
     <meta charset="UTF-8">
@@ -8,15 +8,14 @@
     <link rel="stylesheet" href="estilos.css">
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="grid-galeria.css">
-    <link
-    rel="stylesheet"
     
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+    <!--link
+    rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  /-->
     <script src="https://kit.fontawesome.com/62ea397d3a.js" crossorigin="anonymous">
     </script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <!--link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"-->
 </head>
 <body>
     
@@ -134,7 +133,7 @@
         ></div>
   
 </header>   
-<section><h1>Pagina prototipo en html5 y css3</h1></section>
+<section><h1>Pagina prototipo en html5 y</h1></section>
 <footer class="bg-dark text-center p-2"> 
   <p class="h3">Jimmy WebDevelopment 2021 &copy;</p>
 </footer>
