--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         ></div>
   
 </header>   
-<section><h1>Pagina prototipo en html5 y</h1></section>
+<section><h1>prototipo html5 y css3</h1></section>
 <footer class="bg-dark text-center p-2"> 
   <p class="h3">Jimmy WebDevelopment 2021 &copy;</p>
 </footer>
